k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-notes
  namespace: code-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-notes
  template:
    metadata:
      labels:
        app: flask-notes
    spec:
      containers:
        - name: flask-notes
          image: ayushjsrtia/code-analyzer-backend:latest
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 40
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 50
            timeoutSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
