k8s/bedrock-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bedrock-deploy
  namespace: code-analyzer
  labels:
    app: bedrock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bedrock
  template:
    metadata:
      labels:
        app: bedrock
    spec:
      containers:
        - name: bedrock
          image: ayushjsrtia/code-analyzer-bedrock:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /claude/health
              port: 80
            initialDelaySeconds: 50
            periodSeconds: 50
            timeoutSeconds: 20
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /claude/health
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 40
            timeoutSeconds: 10
            failureThreshold: 5
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
            limits:
              cpu: 1
              memory: 1Gi
