k8s/mysql-delpoy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-deploy
  namespace: code-analyzer
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - "mysqladmin ping -h 127.0.0.1 -uroot -proot"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - "mysqladmin ping -h 127.0.0.1 -uroot -proot"
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes: 
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
