k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-notes
  namespace: code-analyzer
spec:
  selector:
    app: flask-notes
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
