k8s/bedrock-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bedrock
  namespace: code-analyzer
spec:
  selector:
    app: bedrock
  type: NodePort
  ports:
    - protocol: TCP
      port: 80        # service port
      targetPort: 8080 # container port
      nodePort: 30080
