k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: code-analyzer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /claude/ask
            pathType: Prefix
            backend:
              service:
                name: bedrock
                port:
                  number: 80
          - path: /notes
            pathType: Prefix
            backend:
              service:
                name: flask-notes
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
